--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SBL",
-  "version": "0.0.01.01",
-  "description": "No desc",
+  "version": "0.0.1",
+  "description": "A JavaScript API wrapper for SmartBots.tk API",
   "homepage": "https://smartbots.tk",
   "bugs": {
     "url": "https://github.com/Rishiraj0100/SBL.js/issues"
