--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SBL",
+  "name": "@Rishiraj0100/SBL.js",
   "version": "0.0.1",
   "description": "A JavaScript API wrapper for SmartBots.tk API",
   "homepage": "https://smartbots.tk",
