--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: publish Node.js Package
 
 on:
-  release:
-    types: [ created ]
+  push:
+    branches: [ dist ]
 
 jobs:
   build:
@@ -28,7 +28,7 @@ jobs:
       - run: yarn install
       - run: git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com" && git config --global user.name "$GITHUB_ACTOR"
       - run: yarn version --minor
-      - run: git push orgin HEAD/master --tags && git push
+      - run: git push --tags && git push
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
