--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@rishiraj0100'
+          scope: '@Rishiraj0100'
       # Publish to GitHub Packages
       - run: npm publish
         env:
